bdr.BDR2.scala.error
Compilation error:
BDR2:10: error: value forward is not a member of Unit
    case "L" => left() forward()
                       ^BDR2:11: error: value right is not a member of Unit
    case "I" => right() right() forward()
                        ^